--- a/Clase 1 - Variables/index.html
+++ b/Clase 1 - Variables/index.html
@@ -4,6 +4,6 @@
         <title>Clase 1 - VARIABLES</title>
     </head>
     <body>
-        <script src="clase1.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
