--- a/Juego Simon Dice/index.html
+++ b/Juego Simon Dice/index.html
@@ -103,6 +103,7 @@
         constructor() {
           this.inicializar()
           this.generarSecuencia()
+          this.siguienteNivel()
         }
 
         inicializar() {
@@ -119,6 +120,39 @@
 
         generarSecuencia(){
           this.secuencia = new Array(10).fill(0).map(n => Math.floor(Math.random() * 4))
+        }
+
+        siguienteNivel(){
+          this.iluminarSecuencia()
+        }
+
+        transformarNumeroAcolor(num){
+          switch (num) {
+            case 0:
+              return 'celeste'
+            case 1:
+              return 'violeta'
+            case 2:
+              return 'naranja'
+            case 3:
+              return 'verde'
+          }
+        }
+
+        iluminarSecuencia(){
+          for (let index = 0; index < this.nivel; index++) {
+            const color = this.transformarNumeroAcolor(this.secuencia[index])
+            setTimeout(()=>this.iluminarColor(color), 1000*index)
+          }
+        }
+
+        iluminarColor(color){
+          this.colores[color].classList.add('light')
+          setTimeout(()=>this.apagarColor(color), 350)
+        }
+
+        apagarColor(color){
+          this.colores[color].classList.remove('light')
         }
       }
 
