--- a/Juego Simon Dice/index.html
+++ b/Juego Simon Dice/index.html
@@ -107,6 +107,7 @@
         }
 
         inicializar() {
+          thi.elegirColor = this.elegirColor.bind(this)
           btnEmpezar.classList.add('hide')
           this.nivel = 1
           this.colores = {
@@ -124,6 +125,7 @@
 
         siguienteNivel(){
           this.iluminarSecuencia()
+          this.agregarEventosClick()
         }
 
         transformarNumeroAcolor(num){
@@ -153,6 +155,17 @@
 
         apagarColor(color){
           this.colores[color].classList.remove('light')
+        }
+
+        agregarEventosClick(){
+          this.colores.celeste.addEventListener('click',this.elegirColor)
+          this.colores.verde.addEventListener('click',this.elegirColor)
+          this.colores.violeta.addEventListener('click',this.elegirColor)
+          this.colores.naranja.addEventListener('click',this.elegirColor)
+        }
+
+        elegirColor(evento){
+
         }
       }
 
