--- a/Juego Simon Dice/index.html
+++ b/Juego Simon Dice/index.html
@@ -98,16 +98,18 @@
       const naranja = document.getElementById('naranja')
       const verde = document.getElementById('verde')
       const btnEmpezar = document.getElementById('btnEmpezar')
+      const ULTIMO_NIVEL = 10
 
       class Juego {
         constructor() {
           this.inicializar()
           this.generarSecuencia()
-          this.siguienteNivel()
+          setTimeout(this.siguienteNivel, 500)
         }
 
         inicializar() {
-          thi.elegirColor = this.elegirColor.bind(this)
+          this.elegirColor = this.elegirColor.bind(this)
+          this.siguienteNivel = this.siguienteNivel.bind(this)
           btnEmpezar.classList.add('hide')
           this.nivel = 1
           this.colores = {
@@ -124,6 +126,7 @@
         }
 
         siguienteNivel(){
+          this.subnivel = 0
           this.iluminarSecuencia()
           this.agregarEventosClick()
         }
@@ -138,6 +141,19 @@
               return 'naranja'
             case 3:
               return 'verde'
+          }
+        }
+
+        transformarColorANumero(color){
+          switch (color) {
+            case 'celeste':
+              return 0
+            case 'violeta':
+              return 1
+            case 'naranja':
+              return 2
+            case 'verde':
+              return 3
           }
         }
 
@@ -164,8 +180,31 @@
           this.colores.naranja.addEventListener('click',this.elegirColor)
         }
 
-        elegirColor(evento){
+        eliminarEventosClick(){
+          this.colores.celeste.removeEventListener('click',this.elegirColor)
+          this.colores.verde.removeEventListener('click',this.elegirColor)
+          this.colores.violeta.removeEventListener('click',this.elegirColor)
+          this.colores.naranja.removeEventListener('click',this.elegirColor)
+        }
 
+        elegirColor(evento){
+          const nombreColor = evento.target.dataset.color
+          const numeroColor = this.transformarColorANumero(nombreColor)
+          this.iluminarColor(nombreColor)
+          if(numeroColor === this.secuencia[this.subnivel]){
+            this.subnivel ++
+            if(this.subnivel === this.nivel){
+              this.nivel++
+              //this.eliminarEventosClick()
+              if(this.nivel === (ULTIMO_NIVEL + 1)){
+                //gANO
+              }else{
+                setTimeout(this.siguienteNivel, 1500)
+              }
+            }
+          }else{
+            //Perdio
+          }
         }
       }
 
