--- a/Juego Simon Dice/index.html
+++ b/Juego Simon Dice/index.html
@@ -82,6 +82,9 @@
       .hide {
         display: none;
       }
+      *{
+        font-family: Arial, Helvetica, sans-serif;
+      }
     </style>
   </head>
   <body>
@@ -92,6 +95,7 @@
       <div id="verde" class="color verde right" data-color="verde"></div>
       <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <script>
       const celeste = document.getElementById('celeste')
       const violeta = document.getElementById('violeta')
@@ -102,6 +106,7 @@
 
       class Juego {
         constructor() {
+          this.inicializar = this.inicializar.bind(this)
           this.inicializar()
           this.generarSecuencia()
           setTimeout(this.siguienteNivel, 500)
@@ -110,7 +115,7 @@
         inicializar() {
           this.elegirColor = this.elegirColor.bind(this)
           this.siguienteNivel = this.siguienteNivel.bind(this)
-          btnEmpezar.classList.add('hide')
+          this.toggleBtnEmpezar()
           this.nivel = 1
           this.colores = {
             celeste,
@@ -119,6 +124,14 @@
             verde
           }
 
+        }
+
+        toggleBtnEmpezar(){
+          if(btnEmpezar.classList.contains('hide')){
+            btnEmpezar.classList.remove('hide')
+          }else{
+            btnEmpezar.classList.add('hide')
+          }
         }
 
         generarSecuencia(){
@@ -197,14 +210,29 @@
               this.nivel++
               //this.eliminarEventosClick()
               if(this.nivel === (ULTIMO_NIVEL + 1)){
-                //gANO
+                this.ganoElJuego()
               }else{
                 setTimeout(this.siguienteNivel, 1500)
               }
             }
           }else{
-            //Perdio
+            this.perdioElJuego()
           }
+        }
+
+        ganoElJuego(){
+          swal('Platzi',' Felicitaciones, Ganaste el juego!', 'success')
+            .then(()=>{
+              this.inicializar()
+            })
+        }
+
+        perdioElJuego(){
+          swal('Platzi',' Sorry, perdiste el juego!', 'error')
+            .then(()=>{
+              this.eliminarEventosClick()
+              this.inicializar()
+            })
         }
       }
 
